[DTSSTCI-1519] fix sonar issues